feat: 认证体系统一与细粒度 RBAC 鉴权
- 协作服务删除独立 JWT 认证体系（JwtUtil、AuthController、SysUser 等 18 个文件）
- 网关新增用户批量查询/search 接口，供协作服务调网关查用户
- 网关 SaTokenConfig 实现细粒度 RBAC（路径+方法匹配权限码，覆盖知识库/协作/工作台模块）
- 网关新增 WebSocket 路由，支持 query param token 鉴权
- 协作服务新增 GatewayUserClient，所有 Controller/WebSocket Handler 改为调网关查用户
- 前端 WebSocket 连接地址改为网关端口 8086，修复 Documents.vue token 读取 bug
- 白名单调整，/api/system/users/batch 和 /search 不要求 admin 角色

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>